// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textmacros Autoload Autoload 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\href{tmp.html}{a}}" display="block">
  <mtext href="tmp.html" data-latex="\\text{\\href{tmp.html}{a}}">a</mtext>
</math>"
`;

exports[`Textmacros Autoload No Autoload 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\href{tmp.html}{a}}" display="block">
  <mrow data-latex="\\text{\\href{tmp.html}{a}}">
    <mtext>tmp.html</mtext>
    <mtext>a</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros HBox size 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\scriptstyle\\hbox{a}" display="block">
  <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\hbox{a}">
    <mstyle scriptlevel="0" data-latex="\\hbox{a}">
      <mtext>a</mtext>
    </mstyle>
  </mstyle>
</math>"
`;

exports[`Textmacros Macros Accents 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\'a\\&#x2019;a\\\`a\\&#x2018;a\\^a\\&quot;a\\~a\\=a\\.a\\u a\\v a}" display="block">
  <mrow data-latex="\\text{\\'a\\&#x2019;a\\\`a\\&#x2018;a\\^a\\&quot;a\\~a\\=a\\.a\\u a\\v a}">
    <mover>
      <mtext>a</mtext>
      <mo data-mjx-pseudoscript="true">&#xB4;</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo data-mjx-pseudoscript="true">&#xB4;</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo data-mjx-pseudoscript="true">\`</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo data-mjx-pseudoscript="true">\`</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>^</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>&#xA8;</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>~</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>&#xAF;</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>&#x2D9;</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>&#x2D8;</mo>
    </mover>
    <mover>
      <mtext>a</mtext>
      <mo>&#x2C7;</mo>
    </mover>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Bbb 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\Bbb b}c}" display="block">
  <mrow data-latex="\\text{a{\\Bbb b}c}">
    <mtext>a</mtext>
    <mtext mathvariant="double-struck">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Color 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{{\\color{red}{x}}\\textcolor{yellow}{A}\\colorbox{green}{x}\\fcolorbox{blue}{orange}{x}}" display="block">
  <mrow data-latex="\\text{{\\color{red}{x}}\\textcolor{yellow}{A}\\colorbox{green}{x}\\fcolorbox{blue}{orange}{x}}">
    <mtext mathcolor="red">x</mtext>
    <mstyle mathcolor="yellow">
      <mtext>A</mtext>
    </mstyle>
    <mpadded mathbackground="green" width="+10px" height="+5px" depth="+5px" lspace="5px">
      <mtext>x</mtext>
    </mpadded>
    <mpadded mathbackground="orange" style="border: 2px solid blue" width="+10px" height="+5px" depth="+5px" lspace="5px">
      <mtext>x</mtext>
    </mpadded>
  </mrow>
</math>"
`;

exports[`Textmacros Macros HTML 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\href{tmp.html}{x}\\style{padding:3px}{x}\\class{test}{x}\\data{test=1}{x}\\cssId{test}{x}}" display="block">
  <mrow data-latex="\\text{\\href{tmp.html}{x}\\style{padding:3px}{x}\\class{test}{x}\\data{test=1}{x}\\cssId{test}{x}}">
    <mtext href="tmp.html">x</mtext>
    <mtext style="padding:3px">x</mtext>
    <mtext class="test">x</mtext>
    <mtext data-test="1">x</mtext>
    <mtext id="test">x</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Internal Math 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\(b\\)}" display="block">
  <mrow data-latex="\\text{a\\(b\\)}">
    <mtext>a</mtext>
    <mrow data-mjx-texclass="ORD">
      <mi data-latex="b">b</mi>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Newline 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\\\b}" display="block">
  <mrow data-latex="\\text{a\\\\b}">
    <mtext>a</mtext>
    <mrow data-mjx-texclass="ORD">
      <mspace linebreak="newline" data-latex="\\\\"></mspace>
    </mrow>
    <mtext>b</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Phantoms 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\phantom{a}a\\vphantom{a}a\\hphantom{a}a\\smash{a}}" display="block">
  <mrow data-latex="\\text{\\phantom{a}a\\vphantom{a}a\\hphantom{a}a\\smash{a}}">
    <mrow data-mjx-texclass="ORD">
      <mphantom>
        <mtext>a</mtext>
      </mphantom>
    </mrow>
    <mtext>a</mtext>
    <mrow data-mjx-texclass="ORD">
      <mpadded width="0">
        <mphantom>
          <mtext>a</mtext>
        </mphantom>
      </mpadded>
    </mrow>
    <mtext>a</mtext>
    <mrow data-mjx-texclass="ORD">
      <mpadded height="0" depth="0">
        <mphantom>
          <mtext>a</mtext>
        </mphantom>
      </mpadded>
    </mrow>
    <mtext>a</mtext>
    <mrow data-mjx-texclass="ORD">
      <mpadded height="0" depth="0">
        <mtext>a</mtext>
      </mpadded>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Quoted Specials 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\$b\\_c\\%d\\{e\\}f\\&amp;g\\#h}" display="block">
  <mtext data-latex="\\text{a\\$b\\_c\\%d\\{e\\}f\\&amp;g\\#h}">a$b_c%d{e}f&amp;g#h</mtext>
</math>"
`;

exports[`Textmacros Macros Ref and Eqref 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\ref{a}\\eqref{b}}" display="block">
  <mrow data-latex="\\text{\\ref{a}\\eqref{b}}">
    <mrow href="#" class="MathJax_ref">
      <mtext>???</mtext>
    </mrow>
    <mrow href="#" class="MathJax_ref">
      <mtext>(???)</mtext>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Sizes large 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\large a\\Large a\\LARGE a\\huge a\\Huge a}" display="block">
  <mrow data-latex="\\text{a\\large a\\Large a\\LARGE a\\huge a\\Huge a}">
    <mtext>a</mtext>
    <mtext mathsize="1.2">a</mtext>
    <mtext mathsize="1.44">a</mtext>
    <mtext mathsize="1.73">a</mtext>
    <mtext mathsize="2.07">a</mtext>
    <mtext mathsize="2.49">a</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Sizes small 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{{\\tiny a\\Tiny a \\scriptsize a \\small a\\normalsize a}a}" display="block">
  <mrow data-latex="\\text{{\\tiny a\\Tiny a \\scriptsize a \\small a\\normalsize a}a}">
    <mtext mathsize="0.5">a</mtext>
    <mtext mathsize="0.6">a&#xA0;</mtext>
    <mtext mathsize="0.7">a&#xA0;</mtext>
    <mtext mathsize="0.85">a</mtext>
    <mtext mathsize="1">a</mtext>
    <mtext>a</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Text fonts 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\Bbb a\\textnormal{a}\\textup{a}\\textrm{a}\\textit{a}\\textbf{a}\\textsf{a}\\texttt{a}}" display="block">
  <mrow data-latex="\\text{\\Bbb a\\textnormal{a}\\textup{a}\\textrm{a}\\textit{a}\\textbf{a}\\textsf{a}\\texttt{a}}">
    <mtext mathvariant="double-struck">a</mtext>
    <mtext>a</mtext>
    <mtext>a</mtext>
    <mtext>a</mtext>
    <mtext data-mjx-variant="-tex-mathit" mathvariant="italic">a</mtext>
    <mtext mathvariant="bold">a</mtext>
    <mtext mathvariant="sans-serif">a</mtext>
    <mtext mathvariant="monospace">a</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Text rules and spaces 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\Rule{1em}{.5em}{.5em}\\Space{1em}{.5em}{0em}\\rule[.25em]{1em}{.5em}}" display="block">
  <mrow data-latex="\\text{\\Rule{1em}{.5em}{.5em}\\Space{1em}{.5em}{0em}\\rule[.25em]{1em}{.5em}}">
    <mspace width="1em" height=".5em" depth=".5em" mathbackground="black"></mspace>
    <mspace width="1em" height=".5em" depth="0em"></mspace>
    <mpadded voffset=".25em" height="+.25em">
      <mspace width="1em" height=".5em" mathbackground="black"></mspace>
    </mpadded>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Text space macros 1 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\,b\\:c\\&gt;d\\;e\\!f}" display="block">
  <mrow data-latex="\\text{a\\,b\\:c\\&gt;d\\;e\\!f}">
    <mtext>a</mtext>
    <mspace width="0.167em"></mspace>
    <mtext>b</mtext>
    <mspace width="0.222em"></mspace>
    <mtext>c</mtext>
    <mspace width="0.222em"></mspace>
    <mtext>d</mtext>
    <mspace width="0.278em"></mspace>
    <mtext>e</mtext>
    <mspace width="-0.167em"></mspace>
    <mtext>f</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Text space macros 2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\enspace b\\quad c\\qquad d\\thinspace e\\negthinspace f}" display="block">
  <mrow data-latex="\\text{a\\enspace b\\quad c\\qquad d\\thinspace e\\negthinspace f}">
    <mtext>a</mtext>
    <mspace width="0.5em"></mspace>
    <mtext>b</mtext>
    <mspace width="1em"></mspace>
    <mtext>c</mtext>
    <mspace width="2em"></mspace>
    <mtext>d</mtext>
    <mspace width="0.167em"></mspace>
    <mtext>e</mtext>
    <mspace width="-0.167em"></mspace>
    <mtext>f</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Text spacing macros 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\hskip 1emb\\hspace{1em}c\\kern{.1em}d\\mskip{1em}e\\mspace{1em}f\\mkern{.1em}g}" display="block">
  <mrow data-latex="\\text{a\\hskip 1emb\\hspace{1em}c\\kern{.1em}d\\mskip{1em}e\\mspace{1em}f\\mkern{.1em}g}">
    <mtext>a</mtext>
    <mspace width="1em"></mspace>
    <mtext>b</mtext>
    <mspace width="1em"></mspace>
    <mtext>c</mtext>
    <mspace width=".1em"></mspace>
    <mtext>d</mtext>
    <mspace width="1em"></mspace>
    <mtext>e</mtext>
    <mspace width="1em"></mspace>
    <mtext>f</mtext>
    <mspace width=".1em"></mspace>
    <mtext>g</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Text symbols 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\dagger\\ddagger\\S\\AA a\\ldots b\\vdots c}" display="block">
  <mtext data-latex="\\text{\\dagger\\ddagger\\S\\AA a\\ldots b\\vdots c}">&#x2020;&#x2021;&#xA7;&#x212B;a&#x2026;b&#x22EE;c</mtext>
</math>"
`;

exports[`Textmacros Macros Underline 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a \\underline{b c} d}" display="block">
  <mrow data-latex="\\text{a \\underline{b c} d}">
    <mtext>a&#xA0;</mtext>
    <munder>
      <mtext>b c</mtext>
      <mo accent="true">&#x2015;</mo>
    </munder>
    <mtext>&#xA0;d</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros Unicode 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\unicode{x61}\\U{3333}\\char&quot;65}" display="block">
  <mrow data-latex="\\text{\\unicode{x61}\\U{3333}\\char&quot;65}">
    <mtext>a</mtext>
    <mtext>&#x3333;</mtext>
    <mi>e</mi>
  </mrow>
</math>"
`;

exports[`Textmacros Macros bf 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\bf b}c}" display="block">
  <mrow data-latex="\\text{a{\\bf b}c}">
    <mtext>a</mtext>
    <mtext mathvariant="bold">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros cal 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\cal B}c}" display="block">
  <mrow data-latex="\\text{a{\\cal B}c}">
    <mtext>a</mtext>
    <mtext data-mjx-variant="-tex-calligraphic" mathvariant="script">B</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros emph 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\emph{b\\emph{c}}d}" display="block">
  <mrow data-latex="\\text{a\\emph{b\\emph{c}}d}">
    <mtext>a</mtext>
    <mrow>
      <mtext data-mjx-variant="-tex-mathit" mathvariant="italic">b</mtext>
      <mtext>c</mtext>
    </mrow>
    <mtext>d</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros frak 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\frak b}c}" display="block">
  <mrow data-latex="\\text{a{\\frak b}c}">
    <mtext>a</mtext>
    <mtext mathvariant="fraktur">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros it 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\it b}c}" display="block">
  <mrow data-latex="\\text{a{\\it b}c}">
    <mtext>a</mtext>
    <mtext data-mjx-variant="-tex-mathit" mathvariant="italic">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros lapping 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\rlap{a}-- --\\llap{b}}" display="block">
  <mrow data-latex="\\text{\\rlap{a}-- --\\llap{b}}">
    <mrow data-mjx-texclass="ORD">
      <mpadded width="0">
        <mtext>a</mtext>
      </mpadded>
    </mrow>
    <mtext>-- --</mtext>
    <mrow data-mjx-texclass="ORD">
      <mpadded width="0" lspace="-1width">
        <mtext>b</mtext>
      </mpadded>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Macros mit 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\mit b}c}" display="block">
  <mrow data-latex="\\text{a{\\mit b}c}">
    <mtext>a</mtext>
    <mtext mathvariant="italic">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros mmlToken 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{\\mmlToken{mo}{a}}" display="block">
  <mo data-latex="\\text{\\mmlToken{mo}{a}}">a</mo>
</math>"
`;

exports[`Textmacros Macros oldstyle 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{0{\\oldstyle 1}2}" display="block">
  <mrow data-latex="\\text{0{\\oldstyle 1}2}">
    <mtext>0</mtext>
    <mtext data-mjx-variant="-tex-oldstyle" mathvariant="normal">1</mtext>
    <mtext>2</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros rm 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\rm b}c}" display="block">
  <mrow data-latex="\\text{a{\\rm b}c}">
    <mtext>a</mtext>
    <mtext>b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros sf 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\sf b}c}" display="block">
  <mrow data-latex="\\text{a{\\sf b}c}">
    <mtext>a</mtext>
    <mtext mathvariant="sans-serif">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Macros tt 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a{\\tt b}c}" display="block">
  <mrow data-latex="\\text{a{\\tt b}c}">
    <mtext>a</mtext>
    <mtext mathvariant="monospace">b</mtext>
    <mtext>c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Specials Braces 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a {b} c}" display="block">
  <mrow data-latex="\\text{a {b} c}">
    <mtext>a b</mtext>
    <mtext>&#xA0;c</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Specials Dollar 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a$b$}" display="block">
  <mrow data-latex="\\text{a$b$}">
    <mtext>a</mtext>
    <mrow data-mjx-texclass="ORD">
      <mi data-latex="b">b</mi>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Specials Percent 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a%comment
b}" display="block">
  <mtext data-latex="\\text{a%comment
b}">ab</mtext>
</math>"
`;

exports[`Textmacros Specials Quotes 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a \`\`b'' \`c' d}" display="block">
  <mtext data-latex="\\text{a \`\`b'' \`c' d}">a &#x201C;b&#x201D; &#x2018;c&#x2019; d</mtext>
</math>"
`;

exports[`Textmacros Specials Spaces 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a b	 c
 d
 e&#xA0;f\\ g}" display="block">
  <mtext data-latex="\\text{a b	 c
 d
 e&#xA0;f\\ g}">a b c d e&#xA0;f g</mtext>
</math>"
`;

exports[`Textmacros Specials Tilde 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a~b}" display="block">
  <mtext data-latex="\\text{a~b}">a&#xA0;b</mtext>
</math>"
`;

exports[`Textmacros Text color 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\color{red}b}" display="block">
  <mrow data-latex="\\text{a\\color{red}b}">
    <mtext>a</mtext>
    <mtext mathcolor="red">b</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Text color math 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\color{red}b$c$}" display="block">
  <mrow data-latex="\\text{a\\color{red}b$c$}">
    <mtext>a</mtext>
    <mtext mathcolor="red">b</mtext>
    <mrow data-mjx-texclass="ORD">
      <mi data-latex="c" mathcolor="red">c</mi>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Text color math complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a\\color{red}b$c+d$}" display="block">
  <mrow data-latex="\\text{a\\color{red}b$c+d$}">
    <mtext>a</mtext>
    <mtext mathcolor="red">b</mtext>
    <mrow data-mjx-texclass="ORD">
      <mstyle mathcolor="red">
        <mi data-latex="c">c</mi>
        <mo data-latex="+">+</mo>
        <mi data-latex="d">d</mi>
      </mstyle>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Text internal math 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a $\\frac{1}{2}$ b}" display="block">
  <mrow data-latex="\\text{a $\\frac{1}{2}$ b}">
    <mtext>a&#xA0;</mtext>
    <mrow data-mjx-texclass="ORD">
      <mfrac data-latex="\\frac{1}{2}">
        <mn data-latex="1">1</mn>
        <mn data-latex="2">2</mn>
      </mfrac>
    </mrow>
    <mtext>&#xA0;b</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Text internal math complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{a $x+y$ b}" display="block">
  <mrow data-latex="\\text{a $x+y$ b}">
    <mtext>a&#xA0;</mtext>
    <mrow data-mjx-texclass="ORD">
      <mrow>
        <mi data-latex="x">x</mi>
        <mo data-latex="+">+</mo>
        <mi data-latex="y">y</mi>
      </mrow>
    </mrow>
    <mtext>&#xA0;b</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Text macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{abc \\large abc}" display="block">
  <mrow data-latex="\\text{abc \\large abc}">
    <mtext>abc&#xA0;</mtext>
    <mtext mathsize="1.2">abc</mtext>
  </mrow>
</math>"
`;

exports[`Textmacros Text plain 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\text{abc}" display="block">
  <mtext data-latex="\\text{abc}">abc</mtext>
</math>"
`;

exports[`Textmacros Text ref 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\textbf{a \\ref{a}}" display="block">
  <mrow data-latex="\\textbf{a \\ref{a}}">
    <mtext mathvariant="bold">a&#xA0;</mtext>
    <mrow href="#" class="MathJax_ref">
      <mtext>???</mtext>
    </mrow>
  </mrow>
</math>"
`;

exports[`Textmacros Text substitution macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\x{X} \\text{\\x}" display="block">
  <mtext data-latex="\\def\\x{X} \\text{\\x}">X</mtext>
</math>"
`;

exports[`Textmacros Textbf  1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\x{X} \\textbf{a\\x}" display="block">
  <mtext mathvariant="bold" data-latex="\\def\\x{X} \\textbf{a\\x}">aX</mtext>
</math>"
`;
